--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/inspeccionar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/inspeccionar.html
@@ -117,7 +117,7 @@
                 <!-- Botones de acción -->
                 <section class="d-flex justify-content-between align-items-center mt-4"
                     aria-label="Acciones sobre la incidencia">
-                    <a th:href="@{/incidencias}" href="listar.html" class="btn btn-outline-secondary">
+                    <a th:href="@{/admin/incidencias}" href="listar.html" class="btn btn-outline-secondary">
                         <i class="bi bi-arrow-left me-1" aria-hidden="true"></i> Volver al listado
                     </a>
                     <div>
