--- a/GarciaMariaPablo/src/main/resources/templates/global/_fragments/header.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/_fragments/header.html
@@ -18,8 +18,8 @@
                             <i class="bi bi-house-door me-1"></i> Inicio
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/dashboard}">
+                    <li class="nav-item" sec:authorize="isAuthenticated()">
+                        <a class="nav-link" th:href="@{/dashboard}" href="../index.html">
                             <i class="bi bi-briefcase me-1"></i> Dashboard
                         </a>
                     </li>
@@ -118,6 +118,11 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" th:href="@{/faq}" href="faq.html">Preguntas frecuentes</a>
+                </li>
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <a class="nav-link text-light" th:href="@{/dashboard}" href="../index.html">
+                        <i class="bi bi-briefcase me-1"></i> Dashboard
+                    </a>
                 </li>
             </ul>
 
